<resources>
    <string name="app_name">Carpooling</string>
    <string name="facebook_application_id" translatable="false">587925851949020</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb587925851949020</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change email</string>
    <string name="twitter_consumer_key" translatable="false">73qh49qQT6fFVADpxr3OAX6jJ</string>
    <string name="twitter_consumer_secret" translatable="false">EXwLo0LEJtSq9lC1SxEnYibQuuQbNDlq0O20UUUGjDSRRstOL0</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Go to map</string>
    <string name="title_activity_driver">DriverActivity</string>

    <string name="destination">Desitantion</string>

    <string name="starting_place">Starting place</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_road">Send Road</string>
    <string name="add_road">Add Road</string>
    <string name="search">Search</string>
    <string name="type_destination">Type Destination</string>
    <string name="go_to_routes">Go to routes</string>
    <string name="title_activity_after_login">AfterLogin</string>
    <string name="title_home">ACCOUNT</string>
    <string name="title_dashboard">DRIVER</string>
    <string name="title_notifications">PASSENGER</string>
    <string name="todo">TODO</string>
    <string name="account_settings">Account settings</string>
    <string name="filter">Filter</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_save">btn_save</string>
    <string name="save_btn">SAVE</string>
    <string name="confirm">Confirm</string>
    <string name="origin">Origin</string>

    <string name="enter_route">Enter route</string>
    <string name="available_routes">Available routes</string>
    <string name="name">Name</string>
    <string name="hometown">HomeTown</string>
    <string name="przerwa">-</string>
    <string name="todoSecond">TODO</string>
    <string name="date">Date</string>
    <string name="distancefordriver">Distance for driver</string>
    <string name="set_your_road">Set road</string>
    <string name="title_activity_driver_trip">DriverTrip</string>


</resources>
