<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_primary"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:id="@+id/destinationTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="173dp"
            android:layout_marginBottom="10dp"
            android:text="@string/set_your_road"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/tw__solid_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/destinationText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/destinationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:ems="10"

            android:hint="@string/destination"
            android:inputType="textPersonName"
            android:textColor="@color/tw__solid_white"
            android:textColorHint="@color/tw__solid_white"
            app:layout_constraintBottom_toTopOf="@+id/startingPlaceText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destinationTextView" />

        <EditText
            android:id="@+id/startingPlaceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/starting_place"

            android:inputType="textPersonName"
            android:textColor="@color/tw__solid_white"
            android:textColorHint="@color/tw__solid_white"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumberText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destinationText" />

        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/tw__solid_white"
            android:textColorHint="@color/tw__solid_white"
            app:layout_constraintBottom_toTopOf="@+id/dateText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startingPlaceText" />

        <EditText
            android:id="@+id/dateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            android:textColor="@color/tw__solid_white"
            android:textColorHint="@color/tw__solid_white"
            app:layout_constraintBottom_toTopOf="@+id/distanceText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />

        <EditText
            android:id="@+id/distanceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/distancefordriver"

            android:inputType="text"
            android:textColor="@color/tw__solid_white"
            android:textColorHint="@color/tw__solid_white"
            app:layout_constraintBottom_toTopOf="@+id/sendRoadButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText" />

        <Button
            android:id="@+id/sendRoadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="198dp"
            android:background="@color/tw__solid_white"
            android:shadowColor="#00FFFFFF"
            android:text="@string/save_btn"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>